tests/paczka1/fuzzy1/26871376.err
Error in line 2: vz6PY4XGml S350 12,6
Error in line 6: gunPDyyLgzR A395 44,5
Error in line 14: S350 S381 64,4
Error in line 20: S350 A395 76,1
Error in line 13: gunPDyyLgzR S350 44,1
Error in line 25: gunPDyyLgzR S381 29,7
